# G3D

./: .gitattributes  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: Color.h  Matrix3x3.h  Matrix4x4.h  Quaternion.h  Renderer.h  Vector2D.h  Vector3D.h  Vector4D.h  Viewer.h  common.h
common/src/: CMakeLists.txt  Color.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp  Viewer.cpp
resource/: Crate1.mtl  cube.mtl  cube.tga  monkey.mtl  sphere.mtl  t.mtl  t1.tga  tex.tga
src/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SoftwareRenderer.cpp  SoftwareRenderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TriangleMesh.cpp  TriangleMesh.h  main.cpp  tga.c  tga.cpp  tga.h  tgaread.c  tgawrite.c
